# pydeepmerge

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  VERSION  install  pytest.ini  setup.cfg  setup.py  test-requirements.txt  uninstall
.github/workflows/: pytest.yml  release.yml
pydeepmerge/: __init__.py  _deep_merge.py  _merge_configs.py  deep_merge.py
pydeepmerge/errors/: __init__.py  errors.py
pydeepmerge/parsers/: __init__.py  _loader.py  json.py  yaml.py
pydeepmerge/strategies/: __init__.py  _strategies.py
pydeepmerge/strategies/decorators/: __init__.py  _decorators.py
pydeepmerge/types/: __init__.py  types.py
scripts/: extract_version.py  version_verification.py
tests/unit/: decorators_test.py  merge_configs_test.py  prefer_right_test.py  strategies_test.py
